force-app/main/default/objects/Activity/fields/affectlayer__AffectLayer_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__AffectLayer_Call_Id__c</fullName>
    <externalId>true</externalId>
    <label>AffectLayer Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>