force-app/main/default/objects/Activity/fields/affectlayer__Chorus_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Chorus_Call_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Chorus_Call_Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>