force-app/main/default/objects/Activity/fields/affectlayer__ChorusEngagement__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__ChorusEngagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement</label>
    <referenceTo>affectlayer__Engagement__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>