force-app/main/default/objects/Activity/fields/COVID_19_Impact__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Impact__c</fullName>
    <label>COVID-19 Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Delayed</fullName>
            </value>
            <value>
                <fullName>Opportunity Canceled</fullName>
            </value>
            <value>
                <fullName>Implementation Delayed</fullName>
            </value>
            <value>
                <fullName>Implementation Canceled</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
            <value>
                <fullName>Acceleration</fullName>
            </value>
            <value>
                <fullName>Lead Delayed</fullName>
            </value>
            <value>
                <fullName>Lead Canceled</fullName>
            </value>
            <value>
                <fullName>Custom Delayed</fullName>
            </value>
            <value>
                <fullName>Custom Canceled</fullName>
            </value>
            <value>
                <fullName>Enhancement At Risk</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>