force-app/main/default/objects/Activity/fields/COVID_19_Reason__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Reason__c</fullName>
    <label>COVID-19 Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Business Decline</fullName>
            </value>
            <value>
                <fullName>Govt Regs</fullName>
            </value>
            <value>
                <fullName>Fear</fullName>
            </value>
            <value>
                <fullName>Cashflow</fullName>
                <isActive>false</isActive>
                <label>Cashflow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>