force-app/main/default/objects/Activity/fields/Kayako_Post_ID__c.field-meta.xml
<CustomField>
    <fullName>Kayako_Post_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Kayako Post ID</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>