force-app/main/default/objects/Activity/fields/Okrify__Meeting__c.field-meta.xml
<CustomField>
    <fullName>Okrify__Meeting__c</fullName>
    <description>OKRify Meeting</description>
    <label>Meeting</label>
    <type>Url</type>
</CustomField>