force-app/main/default/objects/Activity/fields/Okrify__Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Okrify__Meeting_Link__c</fullName>
    <description>Meeting Link for OKRify meeting</description>
    <label>Meeting Link</label>
    <type>Url</type>
</CustomField>