force-app/main/default/objects/Activity/fields/PO1__c.field-meta.xml
<CustomField>
    <fullName>PO1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>