force-app/main/default/objects/Activity/fields/WeekEnding__c.field-meta.xml
<CustomField>
    <fullName>WeekEnding__c</fullName>
    <formula>CASE(MOD((ActivityDate) - DATE(1900, 1, 6), 7),
0, (ActivityDate) + 0,
1, (ActivityDate) + 6,
2, (ActivityDate) + 5,
3, (ActivityDate) + 4,
4, (ActivityDate) + 3,
5, (ActivityDate) + 2,
6, (ActivityDate)+ 1,
TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeekEnding</label>
    <type>Date</type>
</CustomField>