force-app/main/default/objects/Activity/fields/YOY_Percent_Change__c.field-meta.xml
<CustomField>
    <fullName>YOY_Percent_Change__c</fullName>
    <label>YOY Percent Change</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>