force-app/main/default/objects/Activity/fields/YOY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YOY_Revenue__c</fullName>
    <inlineHelpText>Up/Down/Flat and %</inlineHelpText>
    <label>YOY Revenue</label>
    <length>25</length>
    <type>Text</type>
</CustomField>