force-app/main/default/objects/Activity/fields/YOY_Revenue_Change__c.field-meta.xml
<CustomField>
    <fullName>YOY_Revenue_Change__c</fullName>
    <label>YOY Revenue Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>